edit StoreItems page
