# ShoppingListApp/ShoppingListApp/Views/ScanPage.xaml.cs
@@ -10,23 +10,16 @@ namespace ShoppingListApp.Views
         public ScanPage()
         {
             InitializeComponent();
-            //zxing.Options.PossibleFormats = new System.Collections.Generic.List<ZXing.BarcodeFormat>
-            //{
-            //    ZXing.BarcodeFormat.QR_CODE
-            //};
         }
 
         private void Zxing_OnScanResult(ZXing.Result result)
         {
-            if (result.BarcodeFormat == ZXing.BarcodeFormat.QR_CODE)
-            {
-                Shell.Current.GoToAsync("..?Barcode=" + result.Text);
-            }
+            _ = Shell.Current.GoToAsync("..?Barcode=" + result.Text);
         }
 
         private void ScanCancel_Clicked(object sender, EventArgs e)
         {
-            Shell.Current.GoToAsync("..");
+            _ = Shell.Current.GoToAsync("..");
         }
     }
 }
